Main container and swimlane mods to support scaling swimlanes in Time Strip view. - TimelineViewLayout.vue now adds `is-object-type-*` to its container to allow CSS selection. - Object's `c-object-view` handles overflow-y with scroll when in Time Strip. This is necessary to prevent scrolling of the left hand labels and maintain a consistent right edge alignment for time sync purposes. - Fixed long-standing regression where extra space was added for the toolbar when editing, even if view does not use a toolbar. - Main view now uses dashed border instead of box-shadow for `.is-editing`; theme constants removed.

--- a/src/ui/layout/layout.scss
+++ b/src/ui/layout/layout.scss
@@ -113,6 +113,25 @@
       .l-shell__main-container {
         top: $shellMainBrowseBarH + $interiorMarginLg;
         bottom: $shellTimeConductorH + $interiorMargin;
+
+        &.--has-toolbar {
+          .is-editing & {
+            top: $shellToolBarH + $shellMainBrowseBarH + $interiorMarginLg !important;
+          }
+        }
+
+        > .c-object-view {
+          border: 1px dashed transparent;
+          .is-editing & {
+            border-color: rgba($editUIAreaBaseColor, 0.6);
+          }
+
+          &[s-selected] {
+            .is-editing & {
+              border-color: $editUIAreaBaseColor
+            }
+          }
+        }
       }
 
       @include phonePortrait() {
@@ -376,28 +395,6 @@
 
   &.is-stale {
     @include isStaleHolder();
-  }
-}
-
-.is-editing {
-  .l-shell__main-container > .c-object-view {
-    box-shadow: $editUIAreaShdw;
-
-    &[s-selected] {
-      // Provide a clearer selection context articulation for the
-      //background: orange !important;
-      box-shadow: $editUIAreaShdwSelected;
-    }
-  }
-
-  .l-shell__main-container[s-selected] > .c-object-view {
-    // Provide a clearer selection context articulation for the
-    //background: purple !important;
-    box-shadow: $editUIAreaShdwSelected;
-  }
-
-  .l-shell__main-container.--has-toolbar {
-    top: $shellToolBarH + $shellMainBrowseBarH + $interiorMarginLg !important;
   }
 }
 
